added menu icon to MainActivity to launch preferences activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Route Gradient</string>
 
+    <string name="action_settings">Settings</string>
+
     <!--Preferences strings-->
     <string name="pref_units_key">pref_units</string>
     <string name="pref_units_title">Elevation Units</string>
