--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="pref_units_entry_feet">Feet</string>
     <string name="pref_units_value_feet" translatable="false">feet</string>
     <string name="pref_units_default">@string/pref_units_value_meters</string>
+
+    <string name="pref_samples_key">pref_samples</string>
+    <string name="pref_samples_title">Number of Samples</string>
+    <string name="pref_samples_default">1</string>
 </resources>
