--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,14 @@
     <string name="pref_units_value_feet" translatable="false">feet</string>
     <string name="pref_units_default">@string/pref_units_value_meters</string>
 
+    <string name="pref_data_key">pref_data</string>
+    <string name="pref_data_title">Result Data</string>
+    <string name="pref_data_entry_percent">Percent gradient</string>
+    <string name="pref_data_value_percent" translatable="false">percent</string>
+    <string name="pref_data_entry_total">Total change</string>
+    <string name="pref_data_value_total" translatable="false">total</string>
+    <string name="pref_data_default">@string/pref_data_value_total</string>
+
     <string name="pref_samples_key">pref_samples</string>
     <string name="pref_samples_title">Number of Samples</string>
     <string name="pref_samples_default">1</string>
