--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Route Gradient</string>
     <string name="action_settings">Settings</string>
     <string name="loading_error_message">Unable to execute search. Check your internet connection and try again.</string>
+    <string name="action_map">View route on map</string>
+    <string name="action_share">Share</string>
+    <string name="share_chooser">Select an app to share this route</string>
 
     <!--Preferences strings-->
     <string name="pref_units_key">pref_units</string>
