--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Route Gradient</string>
     <string name="action_settings">Settings</string>
     <string name="loading_error_message">Unable to execute search. Check your internet connection and try again.</string>
+    <string name="bad_result_error_message">Something went wrong. Make sure you have the right coordinates and try again.</string>
 
     <!--Preferences strings-->
     <string name="pref_units_key">pref_units</string>
